fix sidebarCollapse batton - js & view

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -137,6 +137,183 @@ header {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#sidebarCollapse {
+    width: 40px;
+    height: 40px;
+    background: #f5f5f5;
+}
+
 #sidebarCollapse span {
     width: 80%;
     height: 2px;
@@ -144,24 +321,49 @@ header {
     display: block;
     background: #555;
     transition: all 0.8s cubic-bezier(0.81, -0.33, 0.345, 1.375);
-  }
-  #sidebarCollapse span:first-of-type {
+}
+
+#sidebarCollapse span:first-of-type {
     /* rotate first one */
     transform: rotate(45deg) translate(2px, 2px);
-  }
-  #sidebarCollapse span:nth-of-type(2) {
+}
+
+#sidebarCollapse span:nth-of-type(2) {
     /* second one is not visible */
     opacity: 0;
-  }
-  #sidebarCollapse span:last-of-type {
+}
+
+#sidebarCollapse span:last-of-type {
     /* rotate third one */
     transform: rotate(-45deg) translate(1px, -1px);
-  }
-  #sidebarCollapse.active span {
+}
+
+#sidebarCollapse.active span {
     /* no rotation */
     transform: none;
     /* all bars are visible */
     opacity: 1;
     margin: 5px auto;
-  }
+}
   
+@media (max-width: 768px) {
+    #sidebarCollapse span:first-of-type,
+    #sidebarCollapse span:nth-of-type(2),
+    #sidebarCollapse span:last-of-type {
+        transform: none;
+        opacity: 1;
+        margin: 5px auto;
+    }
+    #sidebarCollapse.active span {
+        margin: 0 auto;
+    }
+    #sidebarCollapse.active span:first-of-type {
+        transform: rotate(45deg) translate(2px, 2px);
+    }
+    #sidebarCollapse.active span:nth-of-type(2) {
+        opacity: 0;
+    }
+    #sidebarCollapse.active span:last-of-type {
+        transform: rotate(-45deg) translate(1px, -1px);
+    }
+}
